# SString

./: .gitignore  BUILD  CMakeLists.txt  WORKSPACE  readme.md  vcpkg.json  xmake.lua
cmake/: SStringConfig.cmake.in
include/SString/: SString.h  SStringBuilder.h  algorithm.h
src/: SString.cpp  SStringBuilder.cpp  algorithm.cpp
test/: BUILD  TestAlgol.cpp  TestSString.cpp  TestSStringBuilder.cpp
